fix bug on IE7

--- a/styles/calopt.css
+++ b/styles/calopt.css
@@ -7,7 +7,7 @@
 #bab_calopt_days td {
 	border:#000 1px solid;
 	cursor:pointer;
-	width:6px;
+	width:8px;
 }
 
 #bab_calopt_days .workinghours {
@@ -16,10 +16,11 @@
 
 #bab_calopt_days td span {
 	position:relative;
-	left:-9px;
-	top:-14px;
-	font-size:9px;
-	margin-right:-10px;
+	left:-7px;
+	top:-12px;
+	font-size:8px;
+	margin-right:-1px;
+	overflow:visible;
 }
 
 
